<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:scrollbars="none">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_10">

        <include layout="@layout/toolbar_transparent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:gravity="center|bottom"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/monotype_corsiva"
                        android:text="@string/app_name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/sp_44" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:gravity="center"
                    android:orientation="vertical">


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"
                        app:cardCornerRadius="@dimen/dp_8"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_white_round_corner_with_border_stroke_white_24dp"
                            android:orientation="vertical"
                            android:paddingHorizontal="@dimen/dp_20"
                            android:paddingTop="@dimen/dp_20"
                            android:paddingBottom="@dimen/dp_24">


                            <TextView
                                style="@style/textview_style_black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:includeFontPadding="false"
                                android:text="@string/first_name" />

                            <EditText
                                android:id="@+id/et_first_name"
                                style="@style/editText_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_10"
                                android:hint="@string/enter_first_name"
                                android:inputType="text|textNoSuggestions|textCapWords"
                                android:maxLength="20" />

                            <TextView
                                android:id="@+id/tv_first_name_error"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_6"
                                android:fontFamily="@font/muli_semi_bold"
                                android:textColor="@color/color_red"
                                android:textSize="@dimen/sp_14"
                                android:visibility="gone" />

                            <TextView
                                style="@style/textview_style_black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_20"
                                android:text="@string/last_name" />

                            <EditText
                                android:id="@+id/et_last_name"
                                style="@style/editText_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_10"
                                android:hint="@string/enter_last_name"
                                android:inputType="text|textNoSuggestions|textCapWords"
                                android:maxLength="20" />

                            <TextView
                                android:id="@+id/tv_last_name_error"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_6"
                                android:fontFamily="@font/muli_semi_bold"
                                android:textColor="@color/color_red"
                                android:textSize="@dimen/sp_14"
                                android:visibility="gone" />

                            <TextView
                                style="@style/textview_style_black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_20"
                                android:text="@string/email_address" />

                            <EditText
                                android:id="@+id/et_email"
                                style="@style/editText_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_10"
                                android:hint="@string/enter_email_address"
                                android:inputType="textEmailAddress|textNoSuggestions" />

                            <TextView
                                android:id="@+id/tv_email_error"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_6"
                                android:fontFamily="@font/muli_semi_bold"
                                android:textColor="@color/color_red"
                                android:textSize="@dimen/sp_14"
                                android:visibility="gone" />

                            <TextView
                                style="@style/textview_style_black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_20"
                                android:text="@string/phone_number" />

                            <EditText
                                android:id="@+id/et_phone_number"
                                style="@style/editText_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_10"
                                android:hint="@string/enter_phone_number"
                                android:inputType="phone|textNoSuggestions"
                                android:maxLength="10" />


                            <TextView
                                android:id="@+id/tv_phone_number_error"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_6"
                                android:fontFamily="@font/muli_semi_bold"
                                android:textColor="@color/color_red"
                                android:textSize="@dimen/sp_14"
                                android:visibility="gone" />



                            <TextView
                                style="@style/textview_style_black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_20"
                                android:text="@string/password" />


                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_10"
                                android:orientation="horizontal">

                                <EditText
                                    android:id="@+id/et_password"
                                    style="@style/editText_style"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/enter_password"
                                    android:inputType="textPassword|textNoSuggestions"
                                    android:paddingEnd="@dimen/dp_24" />

                                <ImageView
                                    android:id="@+id/img_info"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:visibility="gone"
                                    android:src="@mipmap/ic_info" />

                            </RelativeLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dp_1"
                                android:background="@drawable/bg_edittext"
                                android:backgroundTint="@color/edittext_line_color"
                                android:visibility="gone" />

                            <TextView
                                android:id="@+id/tv_password_error"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_6"
                                android:fontFamily="@font/muli_semi_bold"
                                android:textColor="@color/color_red"
                                android:textSize="@dimen/sp_14"
                                android:visibility="gone" />

                            <TextView
                                style="@style/textview_style_black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_20"
                                android:text="@string/confirm_password" />

                            <EditText
                                android:id="@+id/et_confirm_password"
                                style="@style/editText_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_10"
                                android:hint="@string/confirm_password"
                                android:inputType="textPassword|textNoSuggestions" />

                            <TextView
                                android:id="@+id/tv_confirm_password_error"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_6"
                                android:fontFamily="@font/muli_semi_bold"
                                android:textColor="@color/color_red"
                                android:textSize="@dimen/sp_14"
                                android:visibility="gone" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>


                <include layout="@layout/button_next" />

                <TextView
                    android:id="@+id/tv_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:paddingBottom="@dimen/dp_10"
                    android:text="@string/sign_up_now"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</LinearLayout>

