<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_10">

        <include layout="@layout/toolbar_transparent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:gravity="center|bottom"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/monotype_corsiva"
                        android:text="@string/app_name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/sp_44" />

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"
                        android:fontFamily="@font/source_sans_pro_bold"
                        android:text="@string/reset_password"
                        android:textColor="@color/color_dark_gray"
                        android:textSize="@dimen/sp_22" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:fontFamily="@font/muli_semi_bold"
                        android:text="@string/reset_password_now"
                        android:textAlignment="center"
                        android:textColor="@color/color_light_gray"
                        android:textSize="@dimen/sp_14" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"
                        app:cardCornerRadius="@dimen/dp_8"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_white_round_corner_with_border_stroke_white_24dp"
                            android:orientation="vertical"
                            android:paddingHorizontal="@dimen/dp_20"
                            android:paddingTop="@dimen/dp_20"
                            android:paddingBottom="@dimen/dp_24">


                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    style="@style/textview_style_black"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:includeFontPadding="false"
                                    android:text="@string/pin" />

                                <TextView
                                    android:id="@+id/tv_resend_pin"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:includeFontPadding="false"
                                    android:fontFamily="@font/muli_semi_bold"
                                    android:text="@string/resend_pin_to_email"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="@dimen/sp_14" />

                            </RelativeLayout>

                            <EditText
                                android:id="@+id/et_enter_pin"
                                style="@style/editText_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_10"
                                android:hint="@string/enter_pin"
                                android:inputType="number" />

                            <TextView
                                android:id="@+id/tv_pin_error"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_6"
                                android:fontFamily="@font/muli_semi_bold"
                                android:textColor="@color/color_red"
                                android:textSize="@dimen/sp_14"
                                android:visibility="gone" />

                            <TextView
                                style="@style/textview_style_black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_20"
                                android:includeFontPadding="false"
                                android:text="@string/new_password" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_10"
                                android:orientation="horizontal">

                                <EditText
                                    android:id="@+id/et_password"
                                    style="@style/editText_style"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/enter_password"
                                    android:inputType="textPassword|textNoSuggestions"
                                    android:paddingEnd="@dimen/dp_24" />

                                <ImageView
                                    android:id="@+id/img_info"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:src="@mipmap/ic_info" />

                            </RelativeLayout>

                            <TextView
                                android:id="@+id/tv_password_error"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_6"
                                android:fontFamily="@font/muli_semi_bold"
                                android:textColor="@color/color_red"
                                android:textSize="@dimen/sp_14"
                                android:visibility="gone" />

                            <TextView
                                style="@style/textview_style_black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_20"
                                android:includeFontPadding="false"
                                android:text="@string/retype_password" />

                            <EditText
                                android:id="@+id/et_confirm_password"
                                style="@style/editText_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_10"
                                android:hint="@string/retype_password"
                                android:inputType="textPassword|textNoSuggestions" />

                            <TextView
                                android:id="@+id/tv_confirm_password_error"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_6"
                                android:fontFamily="@font/muli_semi_bold"
                                android:textColor="@color/color_red"
                                android:textSize="@dimen/sp_14"
                                android:visibility="gone" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>


                <include layout="@layout/button_next" />

                <TextView
                    android:id="@+id/tv_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:padding="@dimen/dp_20"
                    android:text="@string/back_to_login"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</LinearLayout>

